--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -133,7 +133,7 @@
     <ul>
       <li><a href="https://es.wikipedia.org/wiki/Nagua">Nagua</a></li>
       <li><a href="https://es.wikipedia.org/wiki/Cabrera_(República_Dominicana)">Cabrera</a></li>
-      <li><a href="https://es.wikipedia.org/wiki/El_Factor">El Factor></a></li>
+      <li><a href="https://es.wikipedia.org/wiki/El_Factor">El Factor</a></li>
       <li><a href="https://es.wikipedia.org/wiki/R%C3%ADo_San_Juan_(municipio)">Rio San Juan</a></li>    
     </ul>
 
@@ -147,7 +147,7 @@
   <li><a href="https://es.wikipedia.org/wiki/Provincia_de_Monte_Cristi">Monte Cristi</a></li>
     <ul>
       <li><a href="https://es.wikipedia.org/wiki/Castañuelas_(República_Dominicana)">Castañuela</a></li>
-      <li><a href="https://es.wikipedia.org/wiki/Guayub%C3%ADn">Guayubín></a></li>
+      <li><a href="https://es.wikipedia.org/wiki/Guayub%C3%ADn">Guayubín</a></li>
       <li><a href="https://es.wikipedia.org/wiki/Las_Matas_de_Santa_Cruz">Las Matas de Santa Cruz</a></li>
       <li><a href="https://es.wikipedia.org/wiki/Pepillo_Salcedo">Pepillo Salcedo</a></li>
       <li><a href="https://es.wikipedia.org/wiki/Villa_Vásquez">Villa Vásquez</a></li>    
@@ -159,7 +159,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Bayaguana">Monte Plata</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Peralvillo">Peralvillo</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Sabana_Grande_de_Boyá">Sabana Grande de Boyá</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Yamasá">Yamasá></a></li>    
+      <li><a href="https://en.wikipedia.org/wiki/Yamasá">Yamasá</a></li>    
     </ul>
 
   <li><a href="https://en.wikipedia.org/wiki/Pedernales_Province">Pedernales</a></li>
