--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Villa_Riva">Villa Riva</a></li>
     </ul>
 
-  <li><a href="https://en.wikipedia.org/wiki/El_Seibo_Province">El Seibo </a></li>
+  <li><a href="https://en.wikipedia.org/wiki/El_Seibo_Province">El Seibo</a></li>
     <ul>
       <li><a href=" https://en.wikipedia.org/wiki/El_Seibo,_Dominican_Republic">Santa Cruz del Seibo</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Miches">Miches</a></li>    
@@ -259,7 +259,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Santo_Domingo_Oeste">Santo Domingo Oeste</a></li>
     </ul>
 
-  <li><a href="https://en.wikipedia.org/wiki/Valverde_Province">Valverde></a></li>
+  <li><a href="https://en.wikipedia.org/wiki/Valverde_Province">Valverde</a></li>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Santa_Cruz_de_Mao">Mao</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Esperanza,_Dominican_Republic">Esperanza</a></li>
